--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,16 @@
             <artifactId>jsoup</artifactId>
             <version>1.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
